# kos

./: .bazelrc  .gitignore  .gitmodules  MODULE.bazel  Makefile.toml  WORKSPACE.bazel  WORKSPACE.md
common/: Cargo.toml
common/kos-kernel/: BUILD  Cargo.toml
common/kos-kernel/src/: lib.rs  util.rs
common/kos-memory/: BUILD  Cargo.toml
common/kos-memory/src/: lib.rs  memmap.rs
docs/: Boot.md  Build_Config.md  Cargo_Workspace.md  Env.md
test_env_root/boot/limine/: limine.cfg
x86/: Cargo.toml  x86_unknown_none.json
x86/.cargo/: config.toml
x86/multiboot2_loader/: Cargo.toml
x86_64/: Cargo.toml  Makefile.toml
x86_64/x86_64_limine/: BUILD  Cargo.toml  build.rs  linker.ld
x86_64/x86_64_limine/src/: main.rs  memmap.rs
